--- a/proyectos.html
+++ b/proyectos.html
@@ -58,20 +58,81 @@
                 </div>
             </div>
             <div class="container">
-                <div class="row">
-                    <div class="col-12 col-sm 3">
-                        
+                <div class="row card m-1">
+                    <div class="col-sm-4 col-12">
+                        <img src="images/abmclientes.png" alt="" class="img-fluid">
+                        <div class="col-12 color-gradiente py-3">
+                            <h2>ABM CLIENTES</h2>
+                        </div>
+                        <div class="col-12 py-3">
+                            <p>Alta, baja y modificación de un registro de clientes. Realizado en HTML, CSS, PHP,
+                                Bootstrap y Json.</p>
+                        </div>
+                        <div class="row p-3 pb-0">
+                            <div class="col-6">
+                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
+                                    target="_blank">Ver online</a>
+                            </div>
+                            <div class="col-6">
+                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
+                                    target="_blank">Código
+                                    fuente</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-sm 3">
-
+                </div>
+                <div class="row card m-1">
+                    <div class="col-sm-4 col-12">
+                        <img src="images/abmventas.png" alt="" class="img-fluid">
+                        <div class="col-12 color-gradiente py-3">
+                            <h2>SISTEMA DE GESTION DE VENTAS</h2>
+                        </div>
+                        <div class="col-12 py-3">
+                            <p>Sistema de gestión de clientes, productos y ventas. Realizado en HTML, CSS, PHP, MVC,
+                                Bootstrap, Js, Ajax, jQuery y MySQL de base de datos.</p>
+                        </div>
+                        <div class="row p-3 pb-0">
+                            <div class="col-6">
+                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
+                                    target="_blank">Ver online</a>
+                            </div>
+                            <div class="col-6">
+                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
+                                    target="_blank">Código
+                                    fuente</a>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-12 col-sm 3">
-
+                </div>
+                <div class="row card m-1">
+                    <div class="col-sm-4 col-12">
+                        <img src="images/sistema-admin.png" alt="" class="img-fluid">
+                        <div class="col-12 color-gradiente py-3">
+                            <h2>PROYECTO INTEGRADOR</h2>
+                        </div>
+                        <div class="col-12 py-3">
+                            <p>Proyecto Full Stack desarrollado en PHP, Laravel, Javascript, jQuery, AJAX, HTML,
+                                CSS,
+                                Mercadopago con panel administrador, gestor de usuarios, módulo de permisos y
+                                funcionalidades a fines.</p>
+                        </div>
+                        <div class="row p-3 pb-0">
+                            <div class="col-6">
+                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
+                                    target="_blank">Ver online</a>
+                            </div>
+                            <div class="col-6">
+                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
+                                    target="_blank">Código
+                                    fuente</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            </div>
+            </div>
         </main>
-
         <footer class="container">
             <div class="row mt-5 d-flex justify-content-md-end">
                 <div class="col-12 col-sm-3">
@@ -88,7 +149,8 @@
             </div>
         </footer>
         <div class="whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=541162423341" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://api.whatsapp.com/send?phone=541162423341" title="Whatsapp"><i
+                    class="fab fa-whatsapp"></i></a>
         </div>
         <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
 
