--- a/proyectos.html
+++ b/proyectos.html
@@ -25,16 +25,16 @@
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0 mt-2">
                         <li class="nav-item">
-                            <a class="nav-link pe-5 py-1" href="index.html">Inicio</a>
+                            <a class="nav-link px-1 py-1" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 py-1" href="sobre-mi.html">Sobre mí</a>
+                            <a class="nav-link px-5 py-1" href="sobre-mi.html">Sobre mí</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active py-1" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link pe-5 py-1 ms-4" href="contacto.html">Contacto</a>
+                            <a class="nav-link px-4 py-1 ms-4" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="d-inline">
@@ -57,10 +57,10 @@
                     <p>Los siguientes son algunos de los trabajos que he realizado</p>
                 </div>
             </div>
-            <div class="container">
-                <div class="row card m-1">
-                    <div class="col-sm-4 col-12">
-                        <img src="images/abmclientes.png" alt="" class="img-fluid">
+            <div class="row">
+                <div class="col-sm-4 col-12">
+                    <div class="row card m-1">
+                        <img src="images/abmclientes.png" alt="" class="img-fluid ">
                         <div class="col-12 color-gradiente py-3">
                             <h2>ABM CLIENTES</h2>
                         </div>
@@ -81,9 +81,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row card m-1">
-                    <div class="col-sm-4 col-12">
-                        <img src="images/abmventas.png" alt="" class="img-fluid">
+                <div class="col-sm-4 col-12">
+                    <div class="row card m-1">
+                        <img src="images/abmventas.png" alt="" class="img-fluid ps-0">
                         <div class="col-12 color-gradiente py-3">
                             <h2>SISTEMA DE GESTION DE VENTAS</h2>
                         </div>
@@ -104,15 +104,14 @@
                         </div>
                     </div>
                 </div>
-                <div class="row card m-1">
-                    <div class="col-sm-4 col-12">
-                        <img src="images/sistema-admin.png" alt="" class="img-fluid">
+                <div class="col-sm-4 col-12">
+                    <div class="row card m-1">
+                        <img src="images/sistema-admin.png" alt="" class="img-fluid ps-0" >
                         <div class="col-12 color-gradiente py-3">
                             <h2>PROYECTO INTEGRADOR</h2>
                         </div>
                         <div class="col-12 py-3">
-                            <p>Proyecto Full Stack desarrollado en PHP, Laravel, Javascript, jQuery, AJAX, HTML,
-                                CSS,
+                            <p>Proyecto Full Stack desarrollado en PHP, Laravel, Javascript, jQuery, AJAX, HTML, CSS,
                                 Mercadopago con panel administrador, gestor de usuarios, módulo de permisos y
                                 funcionalidades a fines.</p>
                         </div>
@@ -129,7 +128,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
             </div>
             </div>
         </main>
