--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body id="index">
     <header>
         <nav class="navbar navbar-expand-md mb-4">
             <div class="container">
@@ -45,6 +45,57 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mt-4 text-center div-cohete">
+                    <a href="proyectos.html"><img src="images/cohete.svg" class="cohete"></a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 my-4 mt-sm-5 text-center offset-sm-3 mb-3">
+                    <div class="input-home">
+                        <p class="p-1">Bienvenid@ a mi sitio web.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mt-4 text-center mt-1">
+                    <a href="proyectos.html" class="btn shadow">Conoce mis proyectos</a>
+                </div>
+            </div>
+
+
+            </div>
+
+
+
+
+
+        </div>
+
+</main>
+
+    <footer class="container">
+        <div class="row mt-5 d-flex justify-content-md-end">
+            <div class="col-12 col-sm-3">
+                <a href="https://github.com" target="_blank" title="Github"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/nelson-daniel-tarche/" target="_blank" title="Linkedin"><i
+                        class="fab fa-linkedin-in"></i></a>
+            </div>
+            <div class="col-12 col-sm-3">
+                Sponsor <a href="https://depcsuite.com" target="_blank" title="DEPCSUITE">DePC Suite</a>
+            </div>
+            <div class="col-12 col-sm-3">
+                <a href="mailto:info@nelsontarche.com">info@nelsontarche.com.ar</a>
+            </div>
+        </div>
+    </footer>
+    <div class="whatsapp">
+        <a href="https://api.whatsapp.com/send?phone=541162423341" title="Whatsapp"><i
+                class="fab fa-whatsapp"></i></a>
+    </div>
+    <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
