--- a/index.html
+++ b/index.html
@@ -19,23 +19,22 @@
     <header>
         <nav class="navbar navbar-expand-md mb-4">
             <div class="container">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fas fa-bars"></i>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-collapse collapse" id="navbarCollapse" style="">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0 mt-2">
                         <li class="nav-item">
-                            <a class="nav-link px-4 py-1 active" href="index.html">Inicio</a>
+                            <a class="nav-link px-4 py-1" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-5 py-1" href="sobre-mi.html">Sobre mí</a>
+                            <a class="nav-link px-4 py-1" href="sobre-mi.html">Sobre mí</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link py-1" href="proyectos.html">Proyectos</a>
+                            <a class="nav-link px-4 py-1" href="proyectos.html">Proyectos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link px-4 py-1 ms-4" href="contacto.html">Contacto</a>
+                            <a class="nav-link px-4 py-1" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="d-inline">
@@ -64,36 +63,27 @@
                     <a href="proyectos.html" class="btn shadow">Conoce mis proyectos</a>
                 </div>
             </div>
-
-
-            </div>
-
-
-
-
-
         </div>
 
-</main>
+    </main>
 
     <footer class="container">
         <div class="row mt-5 d-flex justify-content-md-end">
             <div class="col-12 col-sm-3">
                 <a href="https://github.com" target="_blank" title="Github"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/nelson-daniel-tarche/" target="_blank" title="Linkedin"><i
+                <a href="https://www.linkedin.com/in/facundo-rios-ab2381164/" target="_blank" title="Linkedin"><i
                         class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-12 col-sm-3">
                 Sponsor <a href="https://depcsuite.com" target="_blank" title="DEPCSUITE">DePC Suite</a>
             </div>
             <div class="col-12 col-sm-3">
-                <a href="mailto:info@nelsontarche.com">info@nelsontarche.com.ar</a>
+                <a href="mailto:alenfacurios@gmail.com">alenfacurios@gmail.com</a>
             </div>
         </div>
     </footer>
     <div class="whatsapp">
-        <a href="https://api.whatsapp.com/send?phone=541162423341" title="Whatsapp"><i
-                class="fab fa-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=542916493085" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
     </div>
     <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
 
