--- a/proyectos.html
+++ b/proyectos.html
@@ -58,9 +58,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 col-12">
-                    <div class="row card m-1">
-                        <img src="images/abmclientes.png" alt="" class="img-fluid ">
+                <div class="col-sm-4 col-12 p-sm-4 px-4 py-2">
+                    <div class="row card">
+                        <div class="col-12 p-0">
+                            <img src="images/abmclientes.png" alt="" class="img-fluid">
+                        </div>
                         <div class="col-12 color-gradiente py-3">
                             <h2>ABM CLIENTES</h2>
                         </div>
@@ -68,45 +70,43 @@
                             <p>Alta, baja y modificación de un registro de clientes. Realizado en HTML, CSS, PHP,
                                 Bootstrap y Json.</p>
                         </div>
-                        <div class="row p-3 pb-0">
+                        <div class="row py-5">
                             <div class="col-6">
-                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
-                                    target="_blank">Ver online</a>
+                                <a href="" class="btn btn-rojo">Ver online</a>
                             </div>
-                            <div class="col-6">
-                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
-                                    target="_blank">Código
-                                    fuente</a>
+                            <div class="col-6 link-rojo text-center">
+                                <a href="">Código fuente</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-12">
-                    <div class="row card m-1">
-                        <img src="images/abmventas.png" alt="" class="img-fluid ps-0">
+                <div class="col-sm-4 col-12 p-sm-4 px-4 py-2">
+                    <div class="row card">
+                        <div class="col-12 p-0">
+                            <img src="images/abmventas.png" alt="" class="img-fluid">
+                        </div>
                         <div class="col-12 color-gradiente py-3">
-                            <h2>SISTEMA DE GESTION DE VENTAS</h2>
+                            <h2>SISTEMA DE GESTIÓN DE VENTAS</h2>
                         </div>
                         <div class="col-12 py-3">
                             <p>Sistema de gestión de clientes, productos y ventas. Realizado en HTML, CSS, PHP, MVC,
                                 Bootstrap, Js, Ajax, jQuery y MySQL de base de datos.</p>
                         </div>
-                        <div class="row p-3 pb-0">
+                        <div class="row py-5">
                             <div class="col-6">
-                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
-                                    target="_blank">Ver online</a>
+                                <a href="" class="btn btn-rojo">Ver online</a>
                             </div>
-                            <div class="col-6">
-                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
-                                    target="_blank">Código
-                                    fuente</a>
+                            <div class="col-6 link-rojo text-center">
+                                <a href="">Código fuente</a>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-4 col-12">
-                    <div class="row card m-1">
-                        <img src="images/sistema-admin.png" alt="" class="img-fluid ps-0" >
+                <div class="col-sm-4 col-12 p-sm-4 px-4 py-2">
+                    <div class="row card">
+                        <div class="col-12 p-0">
+                            <img src="images/proyecto-integrador.png" alt="" class="img-fluid">
+                        </div>
                         <div class="col-12 color-gradiente py-3">
                             <h2>PROYECTO INTEGRADOR</h2>
                         </div>
@@ -115,43 +115,41 @@
                                 Mercadopago con panel administrador, gestor de usuarios, módulo de permisos y
                                 funcionalidades a fines.</p>
                         </div>
-                        <div class="row p-3 pb-0">
+                        <div class="row py-5">
                             <div class="col-6">
-                                <a href="https://nelsontarche.com.ar/sistema/abmclientes/" class="btn btn-rojo"
-                                    target="_blank">Ver online</a>
+                                <a href="" class="btn btn-rojo">Ver online</a>
                             </div>
-                            <div class="col-6">
-                                <a href="https://github.com/depcsuite/abmclientes" class="link-rojo"
-                                    target="_blank">Código
-                                    fuente</a>
+                            <div class="col-6 link-rojo text-center">
+                                <a href="">Código fuente</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            </div>
         </main>
         <footer class="container">
-            <div class="row mt-5 d-flex justify-content-md-end">
-                <div class="col-12 col-sm-3">
+            <div class="row mt-5 pb-3">
+                <div class="col-12 col-sm-3 text-center text-sm-start">
                     <a href="https://github.com" target="_blank" title="Github"><i class="fab fa-github"></i></a>
                     <a href="https://www.linkedin.com/in/nelson-daniel-tarche/" target="_blank" title="Linkedin"><i
                             class="fab fa-linkedin-in"></i></a>
                 </div>
-                <div class="col-12 col-sm-3">
+                <div class="col-12 col-sm-3 text-center text-sm-start pt-2 p-sm-0">
                     Sponsor <a href="https://depcsuite.com" target="_blank" title="DEPCSUITE">DePC Suite</a>
                 </div>
-                <div class="col-12 col-sm-3">
-                    <a href="mailto:info@nelsontarche.com">info@nelsontarche.com.ar</a>
+                <div class="col-12 col-sm-3 text-sm-start  pt-2 p-sm-0">
+                    <a href="alenfacurios@gmail.com">alenfacurios@gmail.com</a>
                 </div>
             </div>
         </footer>
         <div class="whatsapp">
-            <a href="https://api.whatsapp.com/send?phone=541162423341" title="Whatsapp"><i
+            <a href="https://api.whatsapp.com/send?phone=542916493085" title="Whatsapp"><i
                     class="fab fa-whatsapp"></i></a>
         </div>
         <script src="css/bootstrap/js/bootstrap.bundle.min.js"></script>
-
     </body>
+
+
+</body>
 
 </html>
