--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             </section>
             <!-- Menu mobile -->
             <section class="nav__menu--mobile">
-                <span class="nav__menu--mobile-line line1"></span>
-                <span class="nav__menu--mobile-line line2"></span>
-                <span class="nav__menu--mobile-line line3"></span>
+                <figure class="hamburguer__figure">
+                    <img src="images/hamburguer.svg" alt="" class="hamburguer__img">
+                </figure>
             </section>
         </nav>`
     </header>
@@ -44,7 +44,7 @@
 
         <article class="hero__photo">
             <!-- <div class="hero__animated_image animated"></div> -->
-            <figure class="hero__figure figure">
+            <figure class="hero__figure">
                 <img class="hero__img_profile profile" src="images/perfil.png" alt="">
             </figure>
         </article>
@@ -148,7 +148,7 @@
             <article class="education__container">
                 <div class="education__card">
                     <figure class="education__figure">
-                        <img src="images/onenexteducation2.png" alt="" class="education__img education__img_one">
+                        <img src="images/onenexteducation2.png" alt="" class="education__img">
                     </figure>
                     <h2 class="education__title_card">
                         Fullstack developer (HTML, CSS, JS, JAVA)
@@ -270,7 +270,7 @@
 
         <!-- Contact section -->
 
-        <section class="contact container" id="contact">
+        <section class="contact container animated-border" id="contact">
 
             <article class="contact__container">
                 <div class="contact__info">
@@ -337,6 +337,7 @@
         </article>
 
     </footer>
-
+    <script src="js/app.js"></script>
 </body>
+
 </html>
