--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <!-- Header -->
     <header class="header container" id="header">
         <nav class="nav">
-            <section class="nav__logo">
+            <article class="nav__logo">
                 <a href="index.html" class="nav__link">Facundo Rios</a>
                 <img class="nav__logo--img" src="" alt="">
-            </section>
+            </article>
             <!-- Menu desktop-->
-            <section class="nav__menu">
+            <article class="nav__menu">
                 <ul class="nav__list">
                     <li><a href="#about-me" class="nav__list--about nav__list_a">Sobre mi</a></li>
                     <li><a href="#skills" class="nav__list--skills nav__list_a">Habilidades</a></li>
@@ -29,13 +29,13 @@
                     <li><a href="#project" class="nav__list--projects nav__list_a">Proyectos</a></li>
                     <li><a href="#contact" class="nav__list--contact nav__list_a">Contacto</a></li>
                 </ul>
-            </section>
+            </article>
             <!-- Menu mobile -->
-            <section class="nav__menu--mobile">
-                <figure class="hamburguer__figure">
-                    <img src="images/hamburguer.svg" alt="" class="hamburguer__img">
-                </figure>
-            </section>
+            <article class="nav__menu--mobile">
+                <span class="nav__mobile--line line-1"></span>
+                <span class="nav__mobile--line line-2"></span>
+                <span class="nav__mobile--line line-3"></span>
+            </article>
         </nav>`
     </header>
 
