--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </header>
 
     <!-- Hero -->
-    <section class="hero container">
+    <section class="hero container" id="header">
 
         <article class="hero__photo">
             <!-- <div class="hero__animated_image animated"></div> -->
@@ -298,12 +298,12 @@
     </main>
 
     <!-- Button for header -->
-    <a href="#header">
+    <!-- <a href="#header">
         <figure class="arrow__top">
             <img src="images/arrowtop.svg" alt="logo de flecha apuntando hacia arriba para ir al header" name="logo-arrow" class="arrow__top_img">
         </figure>
     </a>
-
+ -->
 
     <!-- Footer -->
     <footer class="footer container">
