--- a/index.html
+++ b/index.html
@@ -282,14 +282,16 @@
                 <div class="contact__card_button">
                     <button class="contact__button">
                         <figure class="contact__card_email">
-                            <img src="images/email.svg" alt="logo de un emial" name="email-logo" class="contact__email">
+                            <a href="mailto: alenfacurios@gmail.com" class="contact__email--link">
+                                <img src="images/email.svg" alt="logo de un emial" name="email-logo" class="contact__email">
+                            </a>
                         </figure>
                     </button>
                 </div>
 
                 <div class="contact__phone">
                     <!-- FALTA FOTO DE IMAGEN DE CELULAR -->
-                    <a href="#" class="contact__link" target="_blank">+54 291 6493085</a>
+                    <a href="https://wa.me/542916493085" class="contact__link" target="_blank">+54 291 6493085</a>
                 </div>
 
             </article>
