changes in project section

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
               />
             </figure>
             <h2 class="education__title_card">
-              Desarrollo de aplicaciones mobile - Java & Android Studio
+              Desarrollo mobile - Java & Android Studio
             </h2>
             <p class="education__paragraph_card">2022 - en curso</p>
           </div>
@@ -263,7 +263,7 @@
               />
             </figure>
             <h2 class="education__title_card">
-              UTN - Tecnico universitario en programacion
+              UTN - Tecnicatura universitario en programacion
             </h2>
             <p class="education__paragraph_card">inicio - 2023</p>
           </div>
@@ -288,10 +288,11 @@
                 <h1 class="hover__title">Calculadora</h1>
                 <div class="hover__description">
                   <p class="hover__paragraph">
-                    Calculadora responsive y funcional realizado con <strong>HTML, CSS Y JAVASCRIPT</strong>
+                    Calculadora responsive y funcional realizado con
+                    <strong>HTML, CSS Y JAVASCRIPT</strong>
                   </p>
-                  <a class="hover__link" href=""><p>Ver codigo</p></a>
-                  <a class="hover__link" href=""><p>Ver online</p></a>
+                  <a class="hover__link" href="https://github.com/alenchufacundo/Calculadora"><p>Ver codigo</p></a>
+                  <a class="hover__link" href="https://alenchufacundo.github.io/Calculadora/"><p>Ver online</p></a>
                 </div>
               </div>
             </div>
@@ -305,11 +306,21 @@
                 <h1 class="hover__title">Dragon Ball Super App</h1>
                 <div class="hover__description">
                   <p class="hover__paragraph">
-                    Web de busqueda de personajes de la saga Dragon Ball Super. Consumo de una API utilizando funcion fetch, async y await.
-                    Tecnologias utilizadas: <strong>HTML, CSS Y JAVASCRIPT</strong>
+                    Web de busqueda de personajes de la saga Dragon Ball Super.
+                    Consumo de una API utilizando funcion fetch, async y await.
+                    Tecnologias utilizadas:
+                    <strong>HTML, CSS Y JAVASCRIPT</strong>
                   </p>
-                  <a class="hover__link" href="https://github.com/alenchufacundo/Dragon-Ball-API"><p>Ver codigo</p></a>
-                  <a class="hover__link" href= "https://alenchufacundo.github.io/Dragon-Ball-API"><p>Ver online</p></a>
+                  <a
+                    class="hover__link"
+                    href="https://github.com/alenchufacundo/Dragon-Ball-API"
+                    ><p>Ver codigo</p></a
+                  >
+                  <a
+                    class="hover__link"
+                    href="https://alenchufacundo.github.io/Dragon-Ball-API"
+                    ><p>Ver online</p></a
+                  >
                 </div>
               </div>
             </div>
@@ -322,9 +333,23 @@
               <div class="hover__image">
                 <h1 class="hover__title">Pomodoro Timer</h1>
                 <div class="hover__description">
-                  <p class="hover__paragraph">Pomodo Timer es una tecnica que utiliza un temporizador para dividir el trabajo en bloques de tiempo separados por un pequeño descanso, y que luego despues de 4 bloques, haya un descanso mas largo. Se realizo con <strong>HTML, CSS Y JAVASCRIPT</strong></p>
-                  <a class="hover__link" href="https://github.com/alenchufacundo/Pomodoro"><p>Ver codigo</p></a>
-                  <a class="hover__link" href="https://alenchufacundo.github.io/Pomodoro/"><p>Ver online</p></a>
+                  <p class="hover__paragraph">
+                    Pomodo Timer es una tecnica que utiliza un temporizador para
+                    dividir el trabajo en bloques de tiempo separados por un
+                    pequeño descanso, y que luego despues de 4 bloques, haya un
+                    descanso mas largo. Se realizo con
+                    <strong>HTML, CSS Y JAVASCRIPT</strong>
+                  </p>
+                  <a
+                    class="hover__link"
+                    href="https://github.com/alenchufacundo/Pomodoro"
+                    ><p>Ver codigo</p></a
+                  >
+                  <a
+                    class="hover__link"
+                    href="https://alenchufacundo.github.io/Pomodoro/"
+                    ><p>Ver online</p></a
+                  >
                 </div>
               </div>
             </div>
@@ -337,9 +362,21 @@
               <div class="hover__image">
                 <h1 class="hover__title">Landing Page</h1>
                 <div class="hover__description">
-                  <p class="hover__paragraph">Proyecto real de una landing page de una panaderia de Bahia Blanca, Argentina. Tecnologias utilizadas: <strong>HTML, CSS Y JAVASCRIPT</strong></p>
-                  <a class="hover__link" href="https://github.com/alenchufacundo/Panaderia-Praline"><p>Ver codigo</p></a>
-                  <a class="hover__link" href="https://alenchufacundo.github.io/Panaderia-Praline/"><p>Ver online</p></a>
+                  <p class="hover__paragraph">
+                    Proyecto real de una landing page de una panaderia de Bahia
+                    Blanca, Argentina. Tecnologias utilizadas:
+                    <strong>HTML, CSS Y JAVASCRIPT</strong>
+                  </p>
+                  <a
+                    class="hover__link"
+                    href="https://github.com/alenchufacundo/Panaderia-Praline"
+                    ><p>Ver codigo</p></a
+                  >
+                  <a
+                    class="hover__link"
+                    href="https://alenchufacundo.github.io/Panaderia-Praline/"
+                    ><p>Ver online</p></a
+                  >
                 </div>
               </div>
             </div>
@@ -352,9 +389,20 @@
               <div class="hover__image">
                 <h1 class="hover__title">Timer</h1>
                 <div class="hover__description">
-                  <p class="hover__paragraph">Timer basico con alarma y modificacion de horas, minutos y segundos. <strong>HTML, CSS Y JAVASCRIPT</strong></p>
-                  <a class="hover__link" href="https://github.com/alenchufacundo/TimerJs"><p>Ver codigo</p></a>
-                  <a class="hover__link" href="https://alenchufacundo.github.io/TimerJs"><p>Ver online</p></a>
+                  <p class="hover__paragraph">
+                    Timer basico con alarma y modificacion de horas, minutos y
+                    segundos. <strong>HTML, CSS Y JAVASCRIPT</strong>
+                  </p>
+                  <a
+                    class="hover__link"
+                    href="https://github.com/alenchufacundo/TimerJs"
+                    ><p>Ver codigo</p></a
+                  >
+                  <a
+                    class="hover__link"
+                    href="https://alenchufacundo.github.io/TimerJs"
+                    ><p>Ver online</p></a
+                  >
                 </div>
               </div>
             </div>
@@ -367,7 +415,11 @@
               <div class="hover__image">
                 <h1 class="hover__title">Aplicacion de escritorio</h1>
                 <div class="hover__description">
-                  <p class="hover__paragraph">Juego realizado en base al famoso juego "Preguntados" con la libreria tkinter con las funcionalidades de un CRUD. Tecnologias utilizadas: <strong>Python, MySQL</strong></p>
+                  <p class="hover__paragraph">
+                    Juego realizado en base al famoso juego "Preguntados" con la
+                    libreria tkinter con las funcionalidades de un CRUD.
+                    Tecnologias utilizadas: <strong>Python, MySQL</strong>
+                  </p>
                   <a class="hover__link" href=""><p>Ver codigo</p></a>
                   <a class="hover__link" href=""><p>Ver online</p></a>
                 </div>
