--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
         <h1 class="hero__title">Hola, soy <strong>Facundo Rios!</strong></h1>
         <span class="hero__subtitle">Desarrollador Full-Stack</span>
         <p class="hero__description_paragraph paragraph">
-          Soy estudiante de programacion, actualmente enfocado al desarrollo web
-          como de aplicaciones de escritorio. Me apasiona crear proyectos que
-          sean funcionales dandole un toque personal mio, por eso mismo
-          considero que la programacion tambien es arte, ya que uno mismo crea.
+          Hola!, soy programador web, de aplicaciones de escritorio y de aplicaciones android. Me apasiona crear proyectos que
+          sean funcionales dandole un toque personal mio. Considero
+          considero que la programacion es un arte, ya que uno mismo crea y resuelve problemas a traves de su imaginacion.
         </p>
         <a
           href="https://drive.google.com/file/d/11CdaNVRxBlAULrvldsDP8fR7gydvLrrx/view?usp=sharing"
@@ -94,6 +93,7 @@
           >DESCARGAR CV</a
         >
       </article>
+      <div id="particles-js"></div>
     </section>
 
     <!-- Main content -->
@@ -118,20 +118,20 @@
               Siempre dispuesto al trabajo en equipo y en aprendizaje continuo.
             </p>
           </div>
-          <picture class="about__image">
+          <figure class="about__image">
             <img
               src="images/animated_dev.gif"
               alt=""
               class="about__image--dev"
             />
-          </picture>
+          </figure>
         </article>
       </section>
 
       <section class="skills container" id="skills">
         <!-- Titulo -->
         <article class="skills__title_container title">
-          <h1 class="skills__title">Tecnologias</h1>
+          <h1 class="skills__title">Habilidades</h1>
         </article>
 
         <!-- Skills -->
@@ -161,7 +161,7 @@
             <p class="logo__description">ANDROID STUDIO</p>
           </figure>
           <figure class="skills__logo">
-            <img class="skills__logo--img" src="images/mysql.svg" alt="" />
+            <img class="skills__logo--img" src="images/mysql.svg" alt=""/>
             <p class="logo__description">MYSQL</p>
           </figure>
           <figure class="skills__logo">
@@ -543,6 +543,8 @@
         </figure>
       </article>
     </footer>
+    <script src="./js/particles.min.js"></script>
+    <script src="./js/particles.js"></script>
     <script src="./js/app.js"></script>
     <script src="./js/slider.js"></script>
   </body>
