--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/scrollbar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -263,7 +264,7 @@
               />
             </figure>
             <h2 class="education__title_card">
-              UTN - Tecnicatura universitario en programacion
+              UTN - Tecnicatura universitaria en programacion
             </h2>
             <p class="education__paragraph_card">inicio - 2023</p>
           </div>
@@ -286,25 +287,22 @@
               />
               <div class="hover__image">
                 <h1 class="hover__title">Calculadora</h1>
-                <a href="">
-                  <p style="font-size: 30px;">hola hola</ps>
-                </a>
-                <!-- <div class="hover__description">
-                  <p class="hover__paragraph">
-                    Calculadora responsive y funcional realizado con
-                    <strong>HTML, CSS Y JAVASCRIPT</strong>
-                  </p>
-                  <a
-                    class="hover__link"
-                    href="https://github.com/alenchufacundo/Calculadora"
-                    ><p>Ver codigo</p></a
-                  >
-                  <a
-                    class="hover__link"
-                    href="https://alenchufacundo.github.io/Calculadora/"
-                    ><p>Ver online</p></a
-                  >
-                </div> -->
+                <div class="hover__description">
+                  <p class="hover__paragraph">Calculadora funcional y responsiva.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon html" src="./images/icons/html.png" alt="">
+                    <img class="hover__icon" src="./images/icons/css.png" alt="">
+                    <img class="hover__icon" src="./images/icons/javascript.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
               </div>
             </figure>
             <figure class="carrusel__figure item-2">
@@ -313,6 +311,25 @@
                 src="./images/proyecto-2.jpg"
                 alt=""
               />
+              <div class="hover__image">
+                <h1 class="hover__title">Buscador de personajes DBS</h1>
+                <div class="hover__description">
+                  <p class="hover__paragraph">Buscador de personajes de Dragon Ball Super, consumiendo un API externa.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon html" src="./images/icons/html.png" alt="">
+                    <img class="hover__icon" src="./images/icons/css.png" alt="">
+                    <img class="hover__icon" src="./images/icons/javascript.png" alt="">
+                    <img class="hover__icon" src="./images/icons/api.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
             </figure>
             <figure class="carrusel__figure item-3">
               <img
@@ -320,6 +337,25 @@
                 src="./images/proyecto-3.jpg"
                 alt=""
               />
+              <div class="hover__image">
+                <h1 class="hover__title">Pomodoro Timer</h1>
+                <div class="hover__description">
+                  <p class="hover__paragraph">App pomodoro con control de tiempo de trabajo, descanso largo y break corto.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon html" src="./images/icons/html.png" alt="">
+                    <img class="hover__icon" src="./images/icons/css.png" alt="">
+                    <img class="hover__icon" src="./images/icons/javascript.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
+              </div>
             </figure>
             <figure class="carrusel__figure item-4">
               <img
@@ -327,6 +363,25 @@
                 src="./images/proyecto-4.jpg"
                 alt=""
               />
+              <div class="hover__image">
+                <h1 class="hover__title">Landing Page</h1>
+                <div class="hover__description">
+                  <p class="hover__paragraph">Landing page de una panaderia de Bahia Blanca.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon html" src="./images/icons/html.png" alt="">
+                    <img class="hover__icon" src="./images/icons/css.png" alt="">
+                    <img class="hover__icon" src="./images/icons/javascript.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
+              </div>
             </figure>
             <figure class="carrusel__figure item-5">
               <img
@@ -334,6 +389,25 @@
                 src="./images/proyecto-5.jpg"
                 alt=""
               />
+              <div class="hover__image">
+                <h1 class="hover__title">Timer</h1>
+                <div class="hover__description">
+                  <p class="hover__paragraph">App de temporizador con control de horas, minutos y segundos, incluido con sonido de alarma.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon html" src="./images/icons/html.png" alt="">
+                    <img class="hover__icon" src="./images/icons/css.png" alt="">
+                    <img class="hover__icon" src="./images/icons/javascript.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
+              </div>
             </figure>
             <figure class="carrusel__figure item-6">
               <img
@@ -341,6 +415,24 @@
                 src="./images/proyecto-6.jpg"
                 alt=""
               />
+              <div class="hover__image">
+                <h1 class="hover__title">Juego "preguntados"</h1>
+                <div class="hover__description">
+                  <p class="hover__paragraph">Aplicacion de escritorio utilizando la libreria Tkinter, con funcionalidades de un CRUD.</p>
+                  <figure class="hover__figure">
+                    <img class="hover__icon" src="./images/icons/mysql.png" alt="">
+                    <img class="hover__icon html" src="./images/icons/python.png" alt="">
+                  </figure>
+                </div>
+                <div class="hover__links">
+                  <a class="hover__link" href="">
+                    Ver codigo
+                  </a>
+                  <a class="hover__link" href="">
+                    Ver demo
+                  </a>
+                </div>
+              </div>
             </figure>
           </div>
 
@@ -543,6 +635,9 @@
 
           <div class="contact__phone">
             <!-- FALTA FOTO DE IMAGEN DE CELULAR -->
+            <figure class="contact__figure">
+              <img class="contact__figure--img" src="./images/wp.svg" alt="">
+            </figure>
             <a
               href="https://wa.me/542916493085"
               class="contact__link"
