--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           imaginacion.
         </p>
         <a
-          href="https://drive.google.com/file/d/11CdaNVRxBlAULrvldsDP8fR7gydvLrrx/view?usp=sharing"
+          href="https://drive.google.com/file/d/1ItuVd-Kf77l6roGuO7gYDHwHoj11DypH/view?usp=sharing"
           target="_blank"
           class="hero__button_cv"
           >DESCARGAR CV</a
@@ -295,10 +295,10 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/Calculadora">
                     Ver codigo
                   </a>
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://alenchufacundo.github.io/Calculadora/">
                     Ver demo
                   </a>
                 </div>
@@ -322,10 +322,10 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/Dragon-Ball-API">
                     Ver codigo
                   </a>
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://alenchufacundo.github.io/Dragon-Ball-API/">
                     Ver demo
                   </a>
                 </div>
@@ -347,10 +347,10 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/Pomodoro">
                     Ver codigo
                   </a>
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://alenchufacundo.github.io/Pomodoro/">
                     Ver demo
                   </a>
                 </div>
@@ -373,10 +373,10 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/Panaderia-Praline">
                     Ver codigo
                   </a>
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://alenchufacundo.github.io/Panaderia-Praline/">
                     Ver demo
                   </a>
                 </div>
@@ -399,10 +399,10 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/TimerJs">
                     Ver codigo
                   </a>
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://alenchufacundo.github.io/TimerJs/">
                     Ver demo
                   </a>
                 </div>
@@ -424,7 +424,7 @@
                   </figure>
                 </div>
                 <div class="hover__links">
-                  <a class="hover__link" href="">
+                  <a class="hover__link" href="https://github.com/alenchufacundo/preguntadosGame">
                     Ver codigo
                   </a>
                   <a class="hover__link" href="">
