--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             <p class="logo__description">JAVA</p>
           </figure>
           <figure class="skills__logo">
-            <img class="skills__logo--img" src="images/jquery.svg" alt="" />
-            <p class="logo__description">JQUERY</p>
+            <img class="skills__logo--img" src="images/react.svg" alt="" />
+            <p class="logo__description">REACT</p>
           </figure>
           <figure class="skills__logo">
             <img class="skills__logo--img" src="images/figma.svg" alt="" />
@@ -203,19 +203,9 @@
               />
             </figure>
             <h2 class="education__title_card">
-              Fullstack developer (HTML, CSS, JS, JAVA)
+              Fullstack developer (HTML, CSS, JS)
             </h2>
-            <p class="education__paragraph_card">2022 - en curso</p>
-          </div>
-
-          <div class="education__card">
-            <figure class="education__figure">
-              <img src="images/utn.png" alt="" class="education__img" />
-            </figure>
-            <h2 class="education__title_card">
-              Fundamentos de la programacion
-            </h2>
-            <p class="education__paragraph_card">2021 - finalizado</p>
+            <p class="education__paragraph_card">2022 - finalizado</p>
           </div>
           <div class="education__card">
             <figure class="education__figure">
@@ -228,7 +218,7 @@
             <h2 class="education__title_card">
               Desarrollo mobile - Java & Android Studio
             </h2>
-            <p class="education__paragraph_card">2022 - en curso</p>
+            <p class="education__paragraph_card">2022 - finalizado</p>
           </div>
 
           <div class="education__card">
@@ -242,7 +232,7 @@
             <h2 class="education__title_card">
               Bootcamp Front-End Codigo Facilito
             </h2>
-            <p class="education__paragraph_card">2022 - en curso</p>
+            <p class="education__paragraph_card">2022 - finalizado</p>
           </div>
 
           <div class="education__card">
@@ -252,7 +242,7 @@
             <h2 class="education__title_card">
               Desarrollo de software - Python , MySQL & SQLite
             </h2>
-            <p class="education__paragraph_card">2022 - en curso</p>
+            <p class="education__paragraph_card">2022 - finalizado</p>
           </div>
           <div class="education__card">
             <figure class="education__figure">
@@ -265,7 +255,7 @@
             <h2 class="education__title_card">
               UTN - Tecnicatura universitaria en programacion
             </h2>
-            <p class="education__paragraph_card">inicio - 2023</p>
+            <p class="education__paragraph_card">2023 - en curso</p>
           </div>
         </article>
       </section>
