--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <p class="logo__description">PYTHON</p>
           </figure>
           <figure class="skills__logo">
-            <img class="skills__logo--img" src="images/java.svg" alt="" />
-            <p class="logo__description">JAVA</p>
+            <img class="skills__logo--img" src="images/cmasmas.svg" alt="" />
+            <p class="logo__description">C++</p>
           </figure>
           <figure class="skills__logo">
             <img class="skills__logo--img" src="images/react.svg" alt="" />
@@ -181,8 +181,8 @@
             <p class="logo__description">FIGMA</p>
           </figure>
           <figure class="skills__logo">
-            <img class="skills__logo--img" src="images/trello.svg" alt="" />
-            <p class="logo__description">TRELLO</p>
+            <img class="skills__logo--img" src="images/csharp.svg" alt="" />
+            <p class="logo__description">C#</p>
           </figure>
         </article>
       </section>
