--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 >
                   Ver codigo
                 </a>
-                <a class="details__link" href="https://deliciasenvasos.shop">
+                <a class="details__link" href="https://64dd2f3487c9a708f63f2ba7--fascinating-clafoutis-597aa0.netlify.app/">
                   Ver demo
                 </a>
               </div>
